worked on mobile ui and fixed bugs

--- a/style.css
+++ b/style.css
@@ -27,5 +27,4 @@ html {
 
 #SUBMIT-EL:hover {
     background-color: grey;
-    padding: 100%;
 }
